Fix event item alignment

--- a/css/style.css
+++ b/css/style.css
@@ -2146,6 +2146,9 @@ button.btn-event .team {
   display: flex;
   text-align: left;
   align-items: center;
+  border: 1px solid red;
+  width: 100%;
+  max-width: 160px;
 }
 button.btn-event .team .text {
   margin-left: 0.5rem;
@@ -2165,6 +2168,7 @@ button.btn-event .team .score {
 }
 button.btn-event .team:last-child {
   text-align: right;
+  justify-content: flex-end;
 }
 button.btn-event .team:last-child .text {
   margin: 0 0.5rem 0 0;
