--- a/scss/_event-list.scss
+++ b/scss/_event-list.scss
@@ -37,6 +37,9 @@ button.btn-event{
     display: flex;
     text-align: left;
     align-items: center;
+    border: 1px solid red;
+    width: 100%;
+    max-width: 160px;
     .text{
       margin-left: .5rem;
     }
@@ -55,6 +58,7 @@ button.btn-event{
     }
     &:last-child{
       text-align: right;
+      justify-content: flex-end;
       .text{
         margin: 0 .5rem 0 0;
         text-align: right;
